--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -8,19 +8,23 @@
       Калькулятор ожидания дня рождения
     </div>
     <div class="card-body">
-      <form>
-        {% bootstrap_form form %}
-        {% bootstrap_button button_type="submit" content="Отправить" %}
-      </form>
+      <form method="post">
+  <!-- Добавьте тег csrf_token. Без него POST-запрос будет отклонён. -->
+  {% csrf_token %}
+  {% bootstrap_form form %}
+  {% bootstrap_button button_type="submit" content="Отправить" %}
+</form>
     </div>
   </div>
-  {% with data=request.GET %}
+  {% with data=form.instance %}
   {% if form.is_valid %}
+    ID новой записи в БД: {{ data.id }}
+    <hr>
     <h2>Привет, {{ data.first_name }} {{ data.last_name }}</h2>
     {% if birthday_countdown == 0 %}
-      С днём рождения!
+      <p>С днём рождения!</p>
     {% else %}
-      Осталось дней до дня рождения: {{ birthday_countdown }}!
+      <p>Осталось дней до дня рождения: {{ birthday_countdown }}!</p>
     {% endif %}
   {% endif %}
 {% endwith %}
